# vectormesh

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_search.py
tests/: test_engine.py
vectormesh/: __init__.py  aggregation.py  engine.py  models.py  node.py  utils.py
vectormesh/adapters/: base.py  mock.py
vectormesh/algorithms/: rrf.py
